--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -66,7 +66,7 @@
               </tr>
               <tr>
                 <th><% _loc('Created On') %>:</th>
-                <td><% $created_on->dmy%> <%$created_on->hms || '&nbsp;' %></td>
+                <td><% $created_on ? $created_on->dmy . ' ' . $created_on->hms : '&nbsp;' %></td>
               </tr>
               <tr>
                 <th><% _loc('Priority') %>:</th>
