--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -14,6 +14,7 @@
     $status
     $events
     $files
+    $dates
     $release => ''
     $release_row => {}
     $topics
@@ -192,8 +193,8 @@ padding: 2px 4px 2px 7px;
               </tr>
 %}              
 
-%if( ($show_projects || $show_assign_to || $show_topics || $show_files)
-%       && ( _array($projects) || _array( $users ) || _array( $files ) || _array( $topics ) ) ) {                    
+%if( _array($dates) || ( ($show_projects || $show_assign_to || $show_topics || $show_files)
+%       && ( _array($projects) || _array( $users ) || _array( $files ) || _array( $topics ) ) ) ) {                    
               <tr>
                 <td colspan="2">
 %if( $show_projects ){                    
@@ -233,6 +234,21 @@ padding: 2px 4px 2px 7px;
 % }
 % }
 
+% if( _array( $dates ) ) {
+                    <ul class="nav nav-list">
+                      <li class="nav-header">
+                        <% _loc("Scheduling") %>
+                      </li>
+                    </ul>
+                    <ul class="" style="margin-left: 20px">
+                      <li class="">
+% foreach my $date ( _array( $dates ) ) {
+                      <li style="margin: 6px 0px 6px 0px">
+                          <% $date->{start_date} %>
+                      </li>
+% }
+                    </ul>
+% }
 
 %if( $show_topics ){                    
 % if( _array( $topics ) ) {
