--- a/root/comp/dashboard.html
+++ b/root/comp/dashboard.html
@@ -1,6 +1,9 @@
 <%args>
     $dashboardlets
 </%args>
+<%perl>
+    use Baseliner::Utils;
+</%perl>
 
 <div id="boot">
     <div class="container_24">
