--- a/root/dashboard/topics.html
+++ b/root/dashboard/topics.html
@@ -18,7 +18,7 @@
 %foreach my $topic (_array @topics){
 % my $numcomment = $topic->{numcomment} ? $topic->{numcomment}:'&nbsp';
                 <tr>
-                    <td colspan='3'><b><a href="javascript:Baseliner.addNewTabComp('/topic/grid?query=<%$topic->{topic_mid}%>', _('Topics'));"><%$topic->{title}%></a></b></td>
+                    <td colspan='3'><b><a href="javascript:Baseliner.addNewTabComp('/topic/grid?query=<%$topic->{topic_mid}%>', _('Topics'));"><% substr($topic->{title},0,30) . ( length( $topic->{title} ) > 30 and '...' ) %></a></b></td>
                     <td><%$numcomment%></td>
                     <td><%$topic->{created_on}%></td>
                 </tr>
