yaml metadata in dashlets

--- a/root/dashboard/baselines.html
+++ b/root/dashboard/baselines.html
@@ -1,3 +1,6 @@
+title: Baselines
+days_to_diff: 10
+---
 <%perl>
     use Baseliner::Utils;
     my @entornos = $c->stash->{entornos};
@@ -20,3 +23,4 @@
 %if ($order_baselines != 1){
     </div>
 %}
+
