--- a/root/dashlets/baselines.html
+++ b/root/dashlets/baselines.html
@@ -1,10 +1,9 @@
 <%perl>
     use Baseliner::Utils;
     my @entornos = $c->stash->{entornos};
-    my $order_baselines = $c->stash->{order_baselines};
 </%perl>
 
-    <div class="grid_10 style="margin-bottom: 5px;">
+    <div>
         <h2>Entornos</h2>
 %foreach my $entorno (_array @entornos){
         <h4><%$entorno->{bl}%></h4>
@@ -15,9 +14,7 @@
             <div class="bar" style="width: <%$entorno->{porcentError}%>%" onmouseover="this.style.cursor='pointer'" onClick="javascript:Baseliner.addNewTabComp('/dashboard/viewjobs?ent=<%$entorno->{bl}%>&swOk=0', _('<%$entorno->{bl}%> - <%$entorno->{totError}%>/<%$entorno->{total}%> ERROR'));"><%$entorno->{totError}%></div>
         </div>
 %}
-
-        <div class="grid_10" style="text-align:right;"><b><a href="javascript:Baseliner.addNewTabComp('/dashboard/viewjobs?ent=All', _('Running jobs'));">Ver en ejecución</a></b></div>
-%if ($order_baselines != 1){
+        <div style="text-align:right;"><b><a href="javascript:Baseliner.addNewTabComp('/dashboard/viewjobs?ent=All', _('Running jobs'));">Ver en ejecución</a></b></div>
     </div>
-%}
+
 
