--- a/root/dashlets/baselines.html
+++ b/root/dashlets/baselines.html
@@ -1,3 +1,10 @@
+<!--
+url: /dashboard/list_baseline
+html: /dashlets/baselines.html
+order: 1
+---
+-->
+
 <%perl>
     use Baseliner::Utils;
     my @entornos = $c->stash->{entornos};
