--- a/root/dashlets/emails.html
+++ b/root/dashlets/emails.html
@@ -1,3 +1,9 @@
+<!--
+url: /dashboard/list_emails
+html: /dashlets/emails.html
+order: 4
+---
+-->
 <%perl>
     use Baseliner::Utils;
     my @emails = $c->stash->{emails};
