--- a/root/dashlets/jobs.html
+++ b/root/dashlets/jobs.html
@@ -1,3 +1,9 @@
+<!--
+url: /dashboard/list_jobs
+html: /dashlets/jobs.html
+order: 5
+---
+-->
 <%perl>
     use Baseliner::Utils;
     my @jobs = $c->stash->{jobs};
