--- a/root/dashlets/topics.html
+++ b/root/dashlets/topics.html
@@ -1,3 +1,9 @@
+<!--
+url: /dashboard/list_topics
+html: /dashlets/topics.html
+order: 3
+---
+-->
 <%perl>
     use Baseliner::Utils;
     my @topics = $c->stash->{topics};
