--- a/root/dashlets/lastjobs.html
+++ b/root/dashlets/lastjobs.html
@@ -1,3 +1,9 @@
+<!--
+url: /dashboard/list_lastjobs
+html: /dashlets/lastjobs.html
+order: 2
+---
+-->
 <%perl>
     use Baseliner::Utils;
     my @lastjobs = $c->stash->{lastjobs};
