js flot and js-reload

--- a/root/site/top.html
+++ b/root/site/top.html
@@ -49,4 +49,5 @@
     <style type="text/css">
     </style>
 
+    <script type="text/javascript" src="/site/globals.js"></script>
     <script type="text/javascript" src="/site/common.js"></script>
