--- a/root/site/header.html
+++ b/root/site/header.html
@@ -19,7 +19,6 @@
  <head>
     <& '/site/nocache.html' &>
     <& '/site/top.html' &>
-    <script type="text/javascript" src="/site/globals.js"></script>
     <script type="text/javascript" src="/site/tablegrid.js"></script>
     <script type="text/javascript" src="/site/tabfu.js"></script>
     <script type="text/javascript" src="/site/help.js"></script>
@@ -29,6 +28,14 @@
     <script type="text/javascript" src="/site/panelresizer.js"></script>
     <script type="text/javascript" src="/static/livegrid/livegrid-all.js"></script>
     <script type="text/javascript" src="/i18n/js"></script>
+
+    <!-- Flot -->
+    <script src="/static/flot/excanvas.min.js"></script>
+    <script src="/static/flot/jquery.flot.js"></script>
+    <script src="/static/flot/jquery.flot.pie.js"></script>
+    <script src="/static/flot/jquery.flot.orderBars.js"></script>
+    <script src="/static/flot/jquery.flot.resize.js"></script>
+
 
     <!-- CodeMirror -->
     <link rel="stylesheet" href="/static/codemirror/lib/codemirror.css">
@@ -164,7 +171,7 @@ Ext.onReady(function(){
             search_box,
             Baseliner.help_button,
 % if( $show_js_reload ) {
-            '<img src="/static/images/icons/calendar.png" style="border:0px;" onclick="Baseliner.toggleCalendar()" onmouseover="this.style.cursor=\'pointer\'" />',
+            '<img src="/static/images/icons/js-reload.png" style="border:0px;" onclick="Baseliner.js_reload()" onmouseover="this.style.cursor=\'pointer\'" />',
 % }
             '<img src="/static/images/icons/calendar.png" style="border:0px;" onclick="Baseliner.toggleCalendar()" onmouseover="this.style.cursor=\'pointer\'" />',
             '<img src="/static/images/icons/application_double.gif" style="border:0px;" onclick="Baseliner.detachCurrentTab()" onmouseover="this.style.cursor=\'pointer\'" />',
