parametrizacion del dashboard

--- a/root/dashlets/baselines.html
+++ b/root/dashlets/baselines.html
@@ -1,7 +1,8 @@
 <!--
+name: Baselines
+description: Job statistics by baselines
 url: /dashboard/list_baseline
 html: /dashlets/baselines.html
-order: 1
 ---
 -->
 
