--- a/root/dashlets/emails.html
+++ b/root/dashlets/emails.html
@@ -1,7 +1,8 @@
 <!--
+name: Emails
+description: List of emails
 url: /dashboard/list_emails
 html: /dashlets/emails.html
-order: 4
 ---
 -->
 <%perl>
