--- a/root/dashlets/jobs.html
+++ b/root/dashlets/jobs.html
@@ -1,7 +1,8 @@
 <!--
+name: Jobs
+description: List of last jobs by application
 url: /dashboard/list_jobs
 html: /dashlets/jobs.html
-order: 5
 ---
 -->
 <%perl>
