--- a/root/dashlets/lastjobs.html
+++ b/root/dashlets/lastjobs.html
@@ -1,7 +1,8 @@
 <!--
+name: Jobs
+description: List of last jobs
 url: /dashboard/list_lastjobs
 html: /dashlets/lastjobs.html
-order: 2
 ---
 -->
 <%perl>
