--- a/root/dashlets/topics.html
+++ b/root/dashlets/topics.html
@@ -1,7 +1,8 @@
 <!--
+name: Topics
+description: List of topics
 url: /dashboard/list_topics
 html: /dashlets/topics.html
-order: 3
 ---
 -->
 <%perl>
