--- a/root/dashlets/baselines.html
+++ b/root/dashlets/baselines.html
@@ -1,6 +1,7 @@
 <!--
 name: Baselines
 description: Job statistics by baselines
+config: config.dashlet.baselines
 url: /dashboard/list_baseline
 html: /dashlets/baselines.html
 ---
