--- a/root/comp/dashboard.html
+++ b/root/comp/dashboard.html
@@ -6,7 +6,8 @@
 
 <div id="boot">
     
-%if($dashboards){    
+% if($dashboards){
+% if(scalar @{$dashboards} > 0){
     <div class="container_24" style="padding-top:12px;padding-left:10px;">
             <div class="grid_19">&nbsp;</div>
             <div class="grid_3 btn-group">
@@ -18,6 +19,7 @@
               </ul>
             </div>
     </div>
+%}
 %}
     <div class="container_24" style="padding-top:10px;padding-left:10px;">
 
