--- a/root/dashlets/emails.html
+++ b/root/dashlets/emails.html
@@ -1,6 +1,7 @@
 <!--
 name: Emails
 description: List of emails
+config: config.dashlet.emails
 url: /dashboard/list_emails
 html: /dashlets/emails.html
 ---
