--- a/root/dashlets/lastjobs.html
+++ b/root/dashlets/lastjobs.html
@@ -1,6 +1,7 @@
 <!--
 name: Jobs
 description: List of last jobs
+config: config.dashlet.lastjobs
 url: /dashboard/list_lastjobs
 html: /dashlets/lastjobs.html
 ---
