--- a/root/dashlets/topics.html
+++ b/root/dashlets/topics.html
@@ -1,6 +1,7 @@
 <!--
 name: Topics
 description: List of topics
+config: config.dashlet.topics
 url: /dashboard/list_topics
 html: /dashlets/topics.html
 ---
