--- a/root/dashlets/jobs.html
+++ b/root/dashlets/jobs.html
@@ -1,6 +1,7 @@
 <!--
 name: Jobs
 description: List of last jobs by application
+config: config.dashlet.jobs
 url: /dashboard/list_jobs
 html: /dashlets/jobs.html
 ---
