demo para graficas

--- a/root/site/header.html
+++ b/root/site/header.html
@@ -35,6 +35,7 @@
     <script src="/static/flot/jquery.flot.pie.js"></script>
     <script src="/static/flot/jquery.flot.orderBars.js"></script>
     <script src="/static/flot/jquery.flot.resize.js"></script>
+    <script src="/static/flot/flot.js"></script>
 
 
     <!-- CodeMirror -->
