traducciones topics by category

--- a/root/dashlets/topics_by_category_pie.html
+++ b/root/dashlets/topics_by_category_pie.html
@@ -1,5 +1,5 @@
 <!--
-name: Topics_by_category_pie
+name: Topics by category
 description: Chart pie (Topics by category)
 url: /dashboard/topics_by_category
 html: /dashlets/topics_by_category_pie.html
